--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.envision.eos</groupId>
+            <artifactId>eos-commons</artifactId>
+            <version>0.0.4</version>
+        </dependency>
     </dependencies>
 </project>
